--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
     <head>
         <title>GOJUSATURO</title>
-        <link rel="stylesheet"v type="text/css" href="goju.css">
+        <link rel="stylesheet"v type="text/css" href="./css/goju.css">
     </head>
 
     <body>
         <div class="goju">
             <header>
-                <img src="c:\Users\Patrick\Downloads\tumblr_09547c683319d4f95f1fbd5e1cd766bc_f50e1651_500.webp">
+                <img src="./pics/tumblr_09547c683319d4f95f1fbd5e1cd766bc_f50e1651_500.webp">
                 <h1>Goju Sotaru</h1> </div>
             </header>
             <div class="content">
@@ -26,7 +26,7 @@
                 <li>He's a nice guy on jujutsu tech</li>
                 <li>He's is the strongest and cruel character in jujutsu kaisen</li>
                 </ol>
-                <img class="big image" src="c:\Users\Patrick\Downloads\Jujutsu-Kaisen-Phantom-Parade.jpg">
+                <img class="big image" src="./pics/Jujutsu-Kaisen-Phantom-Parade.jpg">
                 <h2>GOJU FRIENDS</h2>
                 <ul class="a">
 
@@ -34,17 +34,17 @@
                     <div class="circle-container">
             
                         <div class="circle">
-                            <img src="c:\Users\Patrick\Documents\Gumball Watterson\pics\gb.png">
+                            <img src="./pics/gb.png">
                             <a href=" https://kdotzero999.github.io/WS02-MID01/">
                                 <p class="text-overlay">Gumball</p></a>
                         </div>
                         <div class="circle">
-                            <img src="e:\web\pics\patgif.gif">
+                            <img src="./pics/patgif.gif">
                             <a href="https://patrickcunanan27.github.io/WS02-MID01/">
                                 <p class="text-overlay">PATRICK</p></a>
                         </div>
                         <div class="circle">
-                            <img src="e:\Kano\tanjiro.jpg">
+                            <img src="./pics/tanjiro.jpg">
                             <a href="file:///E:/Kano/index.html">
                                 <p class="text-overlay">TANJIRO</p></a>
                         </div>
