--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         </div>
                         <div class="circle">
                             <img src="./pics/tanjiro.jpg">
-                            <a href="file:///E:/Kano/index.html">
+                            <a href="https://johnraycabatic16.github.io/WS02-MID01/">
                                 <p class="text-overlay">TANJIRO</p></a>
                         </div>
                     </div>
